Fix maven link and move and fix building instructions